--- a/assets/css/capstone1.css
+++ b/assets/css/capstone1.css
@@ -445,7 +445,7 @@ h2 {
 		/*height: 18vh;*/
 	}
 	.p-products {
-		height: 18vh;
+		height: 100%;
 	}
 	.industrial {
 		height: 50vh;
@@ -593,9 +593,9 @@ h2 {
 	.industrial img {
 		height: 30vh;
 	}
-	.p-products {
+	#led p {
 		font-size: 15px;
-		height: 28vh;
+		height: 100%;
 	}
 	.product-image {
 		height: 30vh;
